# Urho3DParticleEditor

./: .gitignore  .gitmodules  notes_build.md  rebuildwin1.bat  rebuildwin2.bat  rebuildwin2_R.bat  rebuildwin3.bat  rebuildwin4.bat
particleEditor/: CMakeLists.txt  Makefile  projectn.kdev4
particleEditor/Resources/Resources/_System/: DefaultStyle.xml
particleEditor/Resources/Resources/_System/UI/: DefaultStyle.xml
particleEditor/Sources/: Defines.h
particleEditor/Sources/Game/: EditorController.cpp  EditorController.h  Game.cpp  Game.h
particleEditor/Sources/Game/Mac/: GameInfo.plist
particleEditor/Sources/Game/UI/: UIMainController.cpp  UIMainController.h  UISceneController.cpp  UISceneController.h
particleEditor/Sources/Shared/: BaseApplication.cpp  BaseApplication.hpp  Shared.h  SharedDefines.h  SharedMath.h
particleEditor/Sources/Shared/Engine/: EngineAnimationBase.cpp  EngineAnimationBase.h  EngineAnimationDelegate.h  EngineAnimationManager.cpp  EngineAnimationManager.h  EngineAnimationPrefix.h  EngineAnimationWait.cpp  EngineAnimationWait.h  EngineTimer.cpp  EngineTimer.h
particleEditor/Sources/Shared/Loader/: LoaderDefines.h  LoaderScene.cpp  LoaderScene.h
particleEditor/Sources/Shared/UI/: UIDefines.h  UISceneModel.cpp  UISceneModel.h
particleEditor/Sources/Shared/Utils/: BinaryDataSource.hpp  BinaryInterfaces.hpp  BinaryPack.cpp  BinaryPack.hpp  BinaryPackUtilities.cpp  BinaryPackUtilities.hpp  BinaryReader.cpp  BinaryReader.h  BinaryWriter.cpp  BinaryWriter.h  BinaryWriterMemory.cpp  BinaryWriterMemory.hpp  BitmapComposer.cpp  BitmapComposer.hpp  BitmapTexture.cpp  BitmapTexture.h  ByteBuffer.cpp  ByteBuffer.h  Containers.h  Convert.cpp  Convert.h  Dispatch.cpp  Dispatch.h  DispatchPrivate.cpp  DispatchPrivate.h  DispatchThread.cpp  DispatchThread.h  Events.cpp  Events.h  FileUtils.cpp  FileUtils.h  ForEach.h  IdGenerator.cpp  IdGenerator.h  Log.cpp  Log.h  PTime.cpp  PTime.h  StringUtils.cpp  StringUtils.h  (+9 more)
particleEditor/Sources/Shared/Utils/Hex/: algorithm.cc  area.cc  boundary.cc  boundingbox.cc  direction.cc  grid.cc  hex.cc  hex.h  hexmove.h  hexsvg.h  move.cc  path.cc  svg.cc
particleEditor/Sources/Shared/Utils/Math/: Colors.h  Geometry.h
particleEditor/Sources/Shared/Utils/zip/: zutil.c
particleEditor/Tests/: testBase.h  testTest.cpp
particleEditor/Vendors/: urho
particleEditor/Vendors/libJSON/: json_value.cpp
particleEditor/Vendors/libJSON/json/: reader.h
